src/index.scss
$white: antiquewhite;
$brown: #605b53;

body {
  background-color: $white;
  color: black;
  margin: 0;
  font-family: 'Old Standard TT', serif;
  font-size: 1.2rem;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  overflow: auto;
  -webkit-overflow-scrolling: touch;

  &::-webkit-scrollbar {
    width: 10px;
    background: transparent;
  }

  &::-webkit-scrollbar-thumb {
    background: linear-gradient(0deg, $white, $brown);
    border-radius: 0;
  }

  &::-webkit-scrollbar-track {
    background: transparent;
    border-radius: 0;
  }
}

* {
  box-sizing: border-box;
}

#root {
  min-height: 100vh;
  display: flex;
  flex-direction: column;

  .App {
    flex: 1;
    display: flex;
    flex-direction: column;
    @media only screen and (min-width: 1000px) {
      flex-direction: row;

      header {
        flex: 1;
      }
    }
  }
}

/*
font-family: 'Old Standard TT', serif;
font-family: 'Cormorant Upright', serif;
font-family: 'Miss Fajardose', cursive;
font-family: 'Forum', cursive;
font-family: 'Dynalight', cursive;
*/

main {
  padding: 1rem;
  display: flex;
  flex: 1;
  flex-direction: column;
  align-items: center;

  .teller {
    display: flex;
    align-items: center;

    label {
      font-size: 1.5rem;
    }

    @media only screen and (max-width: 500px) {
      flex-direction: column;
    }

    .tellegruppe {
      display: flex;
      align-items: center;
    }

    .antall {
      font-family: "Miss Fajardose", cursive;
      font-size: 4rem;
      padding: 1rem;
    }

    button {
      font-family: "Miss Fajardose", cursive;
      font-size: 5rem;
      padding: 0 1rem;
      line-height: 1rem;
      background-color: transparent;
      border: none;

      &:focus {
        outline: none;
      }

      div {
        margin-top: -1.5rem;
      }
    }
  }

}

